fix bug constructing delegate when useProperties is set to true.