@@ -1736,7 +1736,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfJobs(conn));
+                        return Integer.valueOf(getNumberOfJobs(conn));
                     }
                 })).intValue();
     }
@@ -1762,7 +1762,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfTriggers(conn));
+                        return Integer.valueOf(getNumberOfTriggers(conn));
                     }
                 })).intValue();
     }
@@ -1788,7 +1788,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         return ((Integer)executeWithoutLock( // no locks necessary for read...
                 new TransactionCallback() {
                     public Object execute(Connection conn) throws JobPersistenceException {
-                        return new Integer(getNumberOfCalendars(conn));
+                        return Integer.valueOf(getNumberOfCalendars(conn));
                     }
                 })).intValue();
     }
@@ -3031,10 +3031,10 @@ public abstract class JobStoreSupport implements JobStore, Constants {
                         Object[] ctorParams = null;
                         if (canUseProperties()) {
                             Class[] ctorParamTypes = new Class[]{
-                                Logger.class, String.class, String.class, ClassLoadHelper.class, Boolean.class};
+                                Logger.class, String.class, String.class, String.class, ClassLoadHelper.class, Boolean.class};
                             ctor = delegateClass.getConstructor(ctorParamTypes);
                             ctorParams = new Object[]{
-                                getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper(), new Boolean(canUseProperties())};
+                                getLog(), tablePrefix, instanceName, instanceId, getClassLoadHelper(), Boolean.valueOf(canUseProperties())};
                         } else {
                             Class[] ctorParamTypes = new Class[]{
                                 Logger.class, String.class, String.class, String.class, ClassLoadHelper.class};
@@ -3048,19 +3048,19 @@ public abstract class JobStoreSupport implements JobStore, Constants {
                         
                     } catch (NoSuchMethodException e) {
                         throw new NoSuchDelegateException(
-                                "Couldn't find delegate constructor: " + e.getMessage());
+                                "Couldn't find delegate constructor: " + e.getMessage(), e);
                     } catch (InstantiationException e) {
                         throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
+                                + e.getMessage(), e);
                     } catch (IllegalAccessException e) {
                         throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
+                                + e.getMessage(), e);
                     } catch (InvocationTargetException e) {
                         throw new NoSuchDelegateException("Couldn't create delegate: "
-                                + e.getMessage());
+                                + e.getMessage(), e);
                     } catch (ClassNotFoundException e) {
                         throw new NoSuchDelegateException("Couldn't load delegate class: "
-                                + e.getMessage());
+                                + e.getMessage(), e);
                     }
                 }
             }
@@ -3131,7 +3131,7 @@ public abstract class JobStoreSupport implements JobStore, Constants {
         if(sigTime == null && candidateNewNextFireTime >= 0L)
             sigChangeForTxCompletion.set(candidateNewNextFireTime);
         else {
-            if(candidateNewNextFireTime < sigTime)
+            if(sigTime == null || candidateNewNextFireTime < sigTime)
                 sigChangeForTxCompletion.set(candidateNewNextFireTime);
         }
     }
